--- a/section7/marvel-app/src/components/charList/charList.scss
+++ b/section7/marvel-app/src/components/charList/charList.scss
@@ -27,6 +27,10 @@
             height: 200px;
             object-fit: cover;
             transform: translate(-15px, -15px);
+            
+        }
+        .not_found {
+            object-fit: unset;
         }
         &_selected {
             box-shadow: 0 5px 20px $main-color;
