--- a/section7/marvel-app/src/components/charList/charList.scss
+++ b/section7/marvel-app/src/components/charList/charList.scss
@@ -29,12 +29,23 @@
             transform: translate(-15px, -15px);
             
         }
-        .not_found {
-            object-fit: unset;
-        }
         &_selected {
             box-shadow: 0 5px 20px $main-color;
             transform: translateY(-8px);
+        }
+        &-enter {
+            opacity: 0;
+        }
+        &-enter-active {
+            opacity: 1;
+            transition: all 500ms ease-in;
+        }
+        &-exit {
+            opacity: 1;
+        }
+        &-exit-active {
+            opacity: 0;
+            transition: all 500ms ease-in;
         }
     }
     &__name {
