--- a/section8/lesson183/src/app.scss
+++ b/section8/lesson183/src/app.scss
@@ -103,4 +103,8 @@
         color: #e53e3e;
         margin-top: 8px;
     }
+    .button_wrapper {
+        display: flex;
+        justify-content: space-between;
+    }
 }
